// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dendronPub no publish basic 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a data-toggle=\\"popover\\" title=\\"This page has not yet sprouted\\" style=\\"cursor: pointer\\" data-content=\\"<a href=&#x22;https://dendron.so/&#x22;>Dendron</a> (the tool used to generate this site) lets authors selective publish content. You will see this page whenever you click on a link to an unpublished page

<img src=&#x27;https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/not-sprouted.png&#x27;></img>\\">an alias</a></p>
<hr>
<h2 id=\\"children\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#children\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Children</h2>
<ol>
<li><a data-toggle=\\"popover\\" title=\\"This page has not yet sprouted\\" style=\\"cursor: pointer\\" data-content=\\"<a href=&#x22;https://dendron.so/&#x22;>Dendron</a> (the tool used to generate this site) lets authors selective publish content. You will see this page whenever you click on a link to an unpublished page

<img src=&#x27;https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/not-sprouted.png&#x27;></img>\\">Bar</a></li>
<li><a href=\\"foo.html\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`dendronPub no publish inside note ref, note ref link 1`] = `
VFile {
  "contents": "<h1 id=\\"gamma\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#gamma\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Gamma</h1>
<p></p><p></p><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\">
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Alpha</span></div>
  
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <p><a data-toggle=\\"popover\\" title=\\"This page has not yet sprouted\\" style=\\"cursor: pointer\\" data-content=\\"<a href=&#x22;https://dendron.so/&#x22;>Dendron</a> (the tool used to generate this site) lets authors selective publish content. You will see this page whenever you click on a link to an unpublished page

<img src=&#x27;https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/not-sprouted.png&#x27;></img>\\">Beta</a></p>
</div>    
  </div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`dendronPub no publish inside note ref, note ref link 2`] = `
VFile {
  "contents": "<h1 id=\\"gamma\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#gamma\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Gamma</h1>
<p></p><p></p><div class=\\"portal-container\\">
  <div class=\\"portal-head\\">
  <div class=\\"portal-backlink\\">
  <div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Alpha</span></div>
  
  </div>
  </div>
  <div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
  <div class=\\"portal-parent-fader-top\\"></div>
  <div class=\\"portal-parent-fader-bottom\\"></div>
  <p><a data-toggle=\\"popover\\" title=\\"This page has not yet sprouted\\" style=\\"cursor: pointer\\" data-content=\\"<a href=&#x22;https://dendron.so/&#x22;>Dendron</a> (the tool used to generate this site) lets authors selective publish content. You will see this page whenever you click on a link to an unpublished page

<img src=&#x27;https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/not-sprouted.png&#x27;></img>\\">Beta</a></p>
</div>    
  </div><p></p><p></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`dendronPub no publish inside note ref, wikilink 1`] = `
VFile {
  "contents": "<h1 id=\\"gamma\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#gamma\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Gamma</h1>
<p><a data-toggle=\\"popover\\" title=\\"This page has not yet sprouted\\" style=\\"cursor: pointer\\" data-content=\\"<a href=&#x22;https://dendron.so/&#x22;>Dendron</a> (the tool used to generate this site) lets authors selective publish content. You will see this page whenever you click on a link to an unpublished page

<img src=&#x27;https://foundation-prod-assetspublic53c57cce-8cpvgjldwysl.s3-us-west-2.amazonaws.com/assets/images/not-sprouted.png&#x27;></img>\\">Alpha</a></p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`dendronPub prefix imagePrefix 1`] = `
VFile {
  "contents": "# Root

![alt-text](/bond/image-url.jpg)

* * *

## Children

1. [Bar](bar.html)
2. [Foo](foo.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`dendronPub prefix imagePrefix with forward slash 1`] = `
VFile {
  "contents": "# Root

![alt-text](/bond/image-url.jpg)

* * *

## Children

1. [Bar](bar.html)
2. [Foo](foo.html)

",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
